# Hackathon-2-phase--1

./: PRIORITY_FEATURE_TEST_RESULTS.md  README.md  demo_priority_features.py  main.py  pyproject.toml
.claude/commands/: sp.phr.md
.specify/memory/: constitution.md
history/prompts/001-inmemory-todo-cli/: 001-inmemory-todo-cli-spec-created.spec.prompt.md  002-implementation-plan-created.plan.prompt.md  003-implementation-tasks-generated.tasks.prompt.md  004-full-implementation-complete.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
specs/001-inmemory-todo-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-inmemory-todo-cli/checklists/: requirements.md
specs/001-inmemory-todo-cli/contracts/: task-manager.md
src/: __init__.py
src/cli/: __init__.py  handlers.py  menu.py  validators.py
src/models/: __init__.py  task.py
src/services/: __init__.py  task_manager.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
